recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:16: error: not enough arguments for method allerVers: (x$1: Double, x$2: Double)Unit.
Unspecified value parameters x$1, x$2.
  allerVers();
           ^